[package]
name = "near-rng"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "This is a fork of tiny-rng https://github.com/JohnBSmith/tiny-rng to work with the NEAR protocol"
repository = ""
homepage = ""
documentation = ""
keywords = ["rng", "random_numbers", "NEAR"]
authors = ["Sebastian <devsebasgr@gmail.com>"]

[dependencies]
